--- a/site/themes/fitz/sass/_projects.scss
+++ b/site/themes/fitz/sass/_projects.scss
@@ -49,7 +49,9 @@
             position: relative;
             font-size: 17px;
             padding: 10px;
-            background: rgba(255, 255, 255, 0.9);
+            letter-spacing: 2px;
+            background: $color__fitz;
+            color: #fff;
             -webkit-transform: scale(0.7);
             -ms-transform: scale(0.7);
             transform: scale(0.7);
@@ -57,7 +59,6 @@
             transition: all 0.4s ease-in;
             opacity: 0;
             filter: alpha(opacity=0);
-            color: $color__fitz;
             text-transform: uppercase;
             -webkit-box-shadow: 0px 7px 26px 0px rgba(0,0,0,0.75);
             -moz-box-shadow: 0px 7px 26px 0px rgba(0,0,0,0.75);
