--- a/site/themes/fitz/templates/projects.html
+++ b/site/themes/fitz/templates/projects.html
@@ -6,32 +6,51 @@
         </div>
     </div>
 
+    {{ collection:projects limit="10" paginate="true" as="posts" }}
+
+        {{ posts }}
+            {{ if index|%:2 == 1 || index == 0 }}<div class="row">{{ endif }}
+                <div class="col-md-6">
+
+                    <div class="project__wrapper">
+                        {{ assets:hero_image }}<img src="{{ url }}" alt="{{ alt }}"/>{{ /assets:hero_image }}
+                        <div class="project__overlay">
+                           <h2>{{ title }}</h2>
+                           <a class="project__info" href="{{ url }}">View project</a>
+                        </div>
+                    </div>
+
+                </div>
+            {{ if index|%:2 == 0 && index != 0 || last }}</div>{{ endif }}
+        {{ /posts }}
+
+        {{ paginate }}
+            <div class="row text-xs-center">
+                <a href="{{ prev_page }}">⬅ Previous</a>
+                &nbsp;&nbsp;&nbsp;
+                {{ current_page }} of {{ total_pages }}
+                &nbsp;&nbsp;&nbsp;
+                <a href="{{ next_page }}">Next ➡</a>
+            </div>
+        {{ /paginate }}
+
+    {{ /collection:projects }}
+
     <div class="row">
         <div class="col-xs-12 text-xs-center">
-            <p>Display a list of tags here</p>
+            <br><br>
+            <p>Other websites I have worked on...</p>
         </div>
     </div>
 
-    {{ collection:projects }}
-        {{ if index|%:2 == 1 || index == 0 }}<div class="row">{{ endif }}
+    {{ collection:sites sort="order:asc"}}
+        {{ if index|%:2 == 1 || index == 0 }}<div class="row text-xs-center">{{ endif }}
             <div class="col-md-6">
 
-                <div class="project__wrapper">
-                    {{ assets:hero_image }}<img src="{{ url }}" alt="{{ alt }}"/>{{ /assets:hero_image }}
-                    <div class="project__overlay">
-                       <h2>{{ title }}</h2>
-                       <a class="project__info" href="{{ url }}">View project</a>
-                    </div>
-                </div>
+                <a href="{{ site_url }}" target="_blank">{{ title }}</a>
 
             </div>
         {{ if index|%:2 == 0 && index != 0 || last }}</div>{{ endif }}
-    {{ /collection:projects }}
-
-    {{ github:repos account="c-fitzmaurice" type="*all*" sort="created" direction="desc" }}
-        <h2>{{ name }}</h2>
-        <p>{{ description }}</p>
-        <hr />
-    {{ /github:repos }}
+    {{ /collection:sites }}
 </div>
 
