--- a/statamic/resources/js/components/formset-builder/formset-builder.template.html
+++ b/statamic/resources/js/components/formset-builder/formset-builder.template.html
@@ -57,7 +57,7 @@
 
             <div class="form-group">
                 <label class="block">{{ translate('cp.formset_honeypot_field') }}</label>
-                <small class="help-block">{{ translate('cp.formset_honeypot_instructions') }} <a href="https://docs.statamic.com/guides/forms#honeypot">{{ translate('cp.formset_honeypot_link') }}</a></small>
+                <small class="help-block">{{ translate('cp.formset_honeypot_instructions') }} <a href="https://docs.statamic.com/forms#honeypot">{{ translate('cp.formset_honeypot_link') }}</a></small>
                 <input type="text" class="form-control" v-model="formset.honeypot" />
             </div>
 
