--- a/statamic/resources/sass/components/publish.scss
+++ b/statamic/resources/sass/components/publish.scss
@@ -249,7 +249,7 @@ code.parent-url {
         white-space: normal;
         overflow: auto;
         text-overflow: inherit;
-        width: 100%;
+        width: 500px;
     }
 
     #publish-controls {
