--- a/site/themes/fitz/templates/contact.html
+++ b/site/themes/fitz/templates/contact.html
@@ -14,7 +14,7 @@
 
     <div class="row">
         <div class="body-copy col-xs-12 col-sm-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-            {{ form:create in="contact" to="colin@fitz-maurice.com"}}
+            {{ form:create in="contact" }}
 
                 {{ if errors }}
                     <div class="alert alert-danger">
