--- a/site/themes/fitz/templates/projects.html
+++ b/site/themes/fitz/templates/projects.html
@@ -6,7 +6,7 @@
         </div>
     </div>
 
-    {{ collection:projects limit="10" paginate="true" as="posts" }}
+    {{ collection:projects limit="6" paginate="true" as="posts" }}
 
         {{ posts }}
             {{ if index|%:2 == 1 || index == 0 }}<div class="row">{{ endif }}
@@ -25,13 +25,17 @@
         {{ /posts }}
 
         {{ paginate }}
-            <div class="row text-xs-center">
-                <a href="{{ prev_page }}">⬅ Previous</a>
-                &nbsp;&nbsp;&nbsp;
-                {{ current_page }} of {{ total_pages }}
-                &nbsp;&nbsp;&nbsp;
-                <a href="{{ next_page }}">Next ➡</a>
-            </div>
+            {{ if total_pages > 1 }}
+                <div class="row text-xs-center">
+                    {{ if current_page > 1 }}
+                        <a href="{{ prev_page }}">&larr; Previous</a>
+                    {{ endif }}
+                    &nbsp;&nbsp;&nbsp;
+                    {{ current_page }} of {{ total_pages }}
+                    &nbsp;&nbsp;&nbsp;
+                    <a href="{{ next_page }}">Next &rarr;</a>
+                </div>
+            {{ endif }}
         {{ /paginate }}
 
     {{ /collection:projects }}
