--- a/site/themes/fitz/templates/resume.html
+++ b/site/themes/fitz/templates/resume.html
@@ -8,7 +8,7 @@
 
     <div class="row">
         <div class="col-xs-12 text-xs-center">
-            <a href="">Download a PDF here</a>
+            <a href="/assets/img/resume/Fitz-Maurice, Colin J. - Resume.pdf">Download a PDF here</a>
         </div>
     </div>
 
