Email size fixed

--- a/site/themes/fitz/templates/email/thank-you.html
+++ b/site/themes/fitz/templates/email/thank-you.html
@@ -6,56 +6,56 @@ Your email has been received, I will get back to you as soon as I can.
 
 <table cellspacing="0" cellpadding="0" border="0" style="color:#333;background:#fff;padding:0;margin:0;width:100%;font:15px/1.25em 'Helvetica Neue',Arial,Helvetica">
     <tbody>
-        <tr width="100%">
-            <td valign="top" align="left" style="background:#eef0f1;font:15px/1.25em 'Helvetica Neue',Arial,Helvetica">
+    <tr width="100%">
+        <td valign="top" align="left" style="background:#eef0f1;font:15px/1.25em 'Helvetica Neue',Arial,Helvetica">
 
-                <table style="border:none;padding:0 18px;margin:50px auto;width:500px">
-                    <tbody>
+            <table style="border:none;padding:0 18px;margin:0px auto 20px auto;width:500px">
+                <tbody>
 
-                        <tr width="100%" height="60">
-                            <td style="text-align:center">
-                                <img height="40" width="125" src="https://fitz-maurice.com/assets/img/FITZ_email.png" title="Fitz Creative" style="font-weight:bold;font-size:18px;color:#fff;vertical-align:top" class="FITZ">
-                            </td>
-                        </tr>
+                <tr width="100%" height="120">
+                    <td style="text-align:center">
+                        <img height="100" width="100" src="https://fitz-maurice.com/assets/img/FITZ_email.png" title="Fitz Creative" style="font-weight:bold;font-size:18px;color:#fff;vertical-align:top" class="FITZ">
+                    </td>
+                </tr>
 
-                        <tr width="100%" height="60">
-                            <td valign="top" align="left" style="color:#fff;border-top-left-radius:4px;border-top-right-radius:4px;background:#37474F;padding-top:20px;text-align:center;font-size: 40px;">
-                                Thank You
-                            </td>
-                        </tr>
+                <tr width="100%" height="60">
+                    <td valign="top" align="left" style="color:#fff;border-top-left-radius:4px;border-top-right-radius:4px;background:#37474F;padding-top:20px;text-align:center;font-size: 40px;">
+                        Thank You
+                    </td>
+                </tr>
 
-                        <tr width="100%">
-                            <td valign="top" align="left" style="background:#fff;padding:18px">
+                <tr width="100%">
+                    <td valign="top" align="left" style="background:#fff;padding:18px">
 
-                                <h1 style="font-size:20px;margin:16px 0;color:#333;text-align:center">I got your email!</h1>
+                        <h1 style="font-size:20px;margin:16px 0;color:#333;text-align:center">I got your email!</h1>
 
-                                <p style="font:15px/1.25em 'Helvetica Neue',Arial,Helvetica;color:#333;text-align:center">I'll take a look and get back to you as soon as I can.</p>
+                        <p style="font:15px/1.25em 'Helvetica Neue',Arial,Helvetica;color:#333;text-align:center">I'll take a look and get back to you as soon as I can.</p>
 
-                                <div style="background:#f6f7f8;border-radius:3px">
-                                    <br>
-                                    <p style="text-align:center">
-                                        <span style="color:#306f9c;font:26px/1.25em 'Helvetica Neue',Arial,Helvetica;text-decoration:none;font-weight:bold">{{ subject }}</span>
-                                    </p>
+                        <div style="background:#f6f7f8;border-radius:3px">
+                            <br>
+                            <p style="text-align:center">
+                                <span style=";font:26px/1.25em 'Helvetica Neue',Arial,Helvetica;text-decoration:none;font-weight:bold">{{ subject }}</span>
+                            </p>
 
-                                    <!--Button-->
-                                    <!-- <p style="font:15px/1.25em 'Helvetica Neue',Arial,Helvetica;margin-bottom:0;text-align:center">
-                                      <a href="#" style="border-radius:3px;background:#3aa54c;color:#fff;display:block;font-weight:700;font-size:16px;line-height:1.25em;margin:24px auto 6px;padding:10px 18px;text-decoration:none;width:180px" target="_blank"> See the organization</a>
-                                    </p> -->
+                            <!--Button-->
+                            <!-- <p style="font:15px/1.25em 'Helvetica Neue',Arial,Helvetica;margin-bottom:0;text-align:center">
+                              <a href="#" style="border-radius:3px;background:#3aa54c;color:#fff;display:block;font-weight:700;font-size:16px;line-height:1.25em;margin:24px auto 6px;padding:10px 18px;text-decoration:none;width:180px" target="_blank"> See the organization</a>
+                            </p> -->
 
-                                    <p style="font:15px/1.25em 'Helvetica Neue',Arial,Helvetica;color:#333;text-align:center">{{ message }}</p>
-                                    <br>
-                                </div>
+                            <p style="font:15px/1.25em 'Helvetica Neue',Arial,Helvetica;color:#333;text-align:center">{{ message }}</p>
+                            <br>
+                        </div>
 
-                                <!--Footer-->
-                                <!-- <p style="font:14px/1.25em 'Helvetica Neue',Arial,Helvetica;color:#333">
-                                    <strong>What's Trello?</strong> It's the easiest way to organize anything, like having virtual whiteboards with superpowers. <a href="http://trello.com" style="color:#306f9c;text-decoration:none;font-weight:bold" target="_blank">Learn more »</a>
-                                </p> -->
-                            </td>
-                        </tr>
+                        <!--Footer-->
+                        <!-- <p style="font:14px/1.25em 'Helvetica Neue',Arial,Helvetica;color:#333">
+                            <strong>What's Trello?</strong> It's the easiest way to organize anything, like having virtual whiteboards with superpowers. <a href="http://trello.com" style="color:#306f9c;text-decoration:none;font-weight:bold" target="_blank">Learn more »</a>
+                        </p> -->
+                    </td>
+                </tr>
 
-                    </tbody>
-                </table>
-            </td>
-        </tr>
+                </tbody>
+            </table>
+        </td>
+    </tr>
     </tbody>
 </table>
