--- a/statamic/resources/sass/components/sortable.scss
+++ b/statamic/resources/sass/components/sortable.scss
@@ -18,8 +18,8 @@ table .ui-sortable-helper {
 }
 
 .drag-handle {
-    cursor: move;
-	cursor: grab !important;
+    // cursor: move;
+	// cursor: grab !important;
     padding: 2px;
 
 	&:active {
