--- a/statamic/resources/js/components/formset-builder/columns.template.html
+++ b/statamic/resources/js/components/formset-builder/columns.template.html
@@ -1,3 +1,3 @@
 <div>
-    <relate-fieldtype :suggestions-prop="suggestions" :data="columns" :config="{}"></relate-fieldtype>
+    <relate-fieldtype :suggestions-prop="suggestions" :data.sync="columns" :config="{}"></relate-fieldtype>
 </div>
