--- a/statamic/resources/sass/components/search.scss
+++ b/statamic/resources/sass/components/search.scss
@@ -15,6 +15,7 @@
         margin-top: 75px;
         min-width: 100%;
         background-color: #fff;
+        left: 0;
         list-style: none;
         border-radius: 4px;
         @include box-shadow(0px 0px 4px rgba(0,0,0,.25));
