Open graph tag updates

--- a/site/themes/fitz/layouts/home.html
+++ b/site/themes/fitz/layouts/home.html
@@ -29,6 +29,8 @@
     <meta property="og:site_name" content="Colin Fitz-Maurice">
     <meta property="og:url" content="http://fitz-maurice.com/">
     <meta property="og:image" content="http://fitz-maurice.com/assets/img/fitz_social_media.png">
+    <meta property="og:image:width" content="1024">
+    <meta property="og:image:height" content="1024">
     <meta property="og:description" content="Hello. I’m Colin Fitz-Maurice, a Laravel developer with a frontend focus, helping build @Goodworld and living in Philadelphia.">
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary">
