--- a/site/themes/fitz/layouts/default.html
+++ b/site/themes/fitz/layouts/default.html
@@ -30,12 +30,14 @@
     <meta property="og:site_name" content="Colin Fitz-Maurice">
     <meta property="og:url" content="{{ current_url }}">
     <meta property="og:image" content="https://fitz-maurice.com/assets/img/fitz_social_media.png">
-    <meta property="article:published_time" content="{{ date }}">
+    <meta property="og:image:width" content="1024">
+    <meta property="og:image:height" content="1024">
+    <meta property="article:published_time" content="{{ date format="Y-m-d" }}">
     <meta property="article:author" content="https://www.facebook.com/colin.fitz.maurice">
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@c_fitzmaurice">
-    <meta name="twitter:title" content="{{ date }}">
+    <meta name="twitter:title" content="{{ title }}">
     <meta name="twitter:description" content="{{ description|safe_truncate:140:... }}">
     <meta name="twitter:image" content="https://fitz-maurice.com/assets/img/fitz_social_media.png">
 </head>
