--- a/site/themes/fitz/templates/errors/404.html
+++ b/site/themes/fitz/templates/errors/404.html
@@ -7,6 +7,6 @@
 <div class="row">
     <div class="col-md-6 col-md-push-3">
         <p class="lead">Seems you might be lost...</p>
-        <p><a href="fitz-maurice.com">Go Home</a></p>
+        <p><a href="https://fitz-maurice.com">Go Home</a></p>
     </div>
 </div>
