--- a/statamic/resources/sass/components/assets.scss
+++ b/statamic/resources/sass/components/assets.scss
@@ -499,9 +499,12 @@
 
     .asset-controls {
         position: absolute;
-        bottom: 8px;
-        right: 5px;
+        top: 45%;
+        left: 50%;
+        margin-left: -35px;
         display: none;
+        width: 70px;
+        text-align: center;
     }
 
     &:hover .asset-controls {
