--- a/statamic/resources/js/components/publish/publish.template.html
+++ b/statamic/resources/js/components/publish/publish.template.html
@@ -45,8 +45,8 @@
             </div>
 
             <div class="btn-group" v-if="!editingLayout">
-                
-                <button v-if="! continuing" type="button" class="btn btn-primary" @click="publish" :disabled="saving">{{ translate('cp.save') }}</button>
+
+                <button v-if="! continuing" type="button" class="btn btn-primary" @click="publishWithoutContinuing" :disabled="saving">{{ translate('cp.save') }}</button>
                 <button v-else type="button" class="btn btn-primary" @click="publishAndContinue" :disabled="saving">{{ translate('cp.save_and_continue') }}</button>
                 
                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" :disabled="saving">
@@ -55,7 +55,7 @@
                 </button>
                 <ul class="dropdown-menu">
                     <li v-if="! continuing"><a id="publish-continue" @click="publishAndContinue">{{ translate('cp.save_and_continue') }}</a></li>
-                    <li v-else><a @click="publish">{{ translate('cp.save') }}</a></li>
+                    <li v-else><a @click="publishWithoutContinuing">{{ translate('cp.save') }}</a></li>
                     <li v-if="canEditLayout"><a @click="editLayout(true)">{{ translate('cp.edit_layout') }}</a></li>
                 </ul>
             </div>
