--- a/statamic/resources/js/components/publish/fields.template.html
+++ b/statamic/resources/js/components/publish/fields.template.html
@@ -25,6 +25,7 @@
 						:data.sync="fieldData[field.name]"
 						:config="fields[$index]"
 						:autofocus="focus && $index == 0"
+						:leave-alert="true"
 						v-focus="$index == 0">
 			</component>
 
