--- a/statamic/resources/sass/cp.scss
+++ b/statamic/resources/sass/cp.scss
@@ -5,7 +5,7 @@
 @import "core/animation";
 
 // Vendors
-@import "bootstrap";
+@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "sweetalert";
 @import "vendors/codemirror";
 @import "vendors/date-picker";
