--- a/site/themes/fitz/partials/nav.html
+++ b/site/themes/fitz/partials/nav.html
@@ -20,7 +20,7 @@
         <ul class="navigation">
             {{ nav from="/" include_home="true" scope="tag" }}
                 <li{{ if is_current or is_parent }} class="active"{{ /if }}>
-                    <a href="{{ url }}">{{ tag:nav_title or title }}</a>
+                    <a href="{{ link_active url }}">{{ tag:nav_title or title }}</a>
                 </li>
             {{ /nav }}
         </ul>
