--- a/site/themes/fitz/css/fitz.css
+++ b/site/themes/fitz/css/fitz.css
@@ -226,7 +226,7 @@ img {
   -webkit-transition: all ease .3s;
 }
 
-.navigation-wrapper ul.navigation li a:hover {
+.navigation-wrapper ul.navigation li a.active, .navigation-wrapper ul.navigation li a:hover {
   padding-right: 15px;
   border-right: 3px solid #37474F;
 }
