--- a/site/themes/fitz/layouts/home.html
+++ b/site/themes/fitz/layouts/home.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html style="height: 100%; width: 100%;">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
