--- a/site/themes/fitz/templates/home.html
+++ b/site/themes/fitz/templates/home.html
@@ -21,9 +21,9 @@
                 <div class="navigation-wrapper">
                     <ul class="navigation">
                         {{ nav from="/" include_home="true" scope="tag" }}
-                        <li{{ if is_current or is_parent }} class="active"{{ /if }}>
-                        <a href="{{ url }}">{{ tag:nav_title or title }}</a>
-                        </li>
+                            <li>
+                                <a {{ if is_current or is_parent }} class="active"{{ /if }} href="{{ url }}">{{ tag:nav_title or title }}</a>
+                            </li>
                         {{ /nav }}
                     </ul>
                 </div>
@@ -80,6 +80,6 @@
                 </li>
             </ul>
         </div>
-        <div class="col-md-6 pull-md-6 text-md-left text-xs-center">&copy; Fitz Creative, LLC. {{ current_date format='Y' }}</div>
+        <div class="col-md-6 pull-md-6 text-md-left text-xs-center">&copy; {{ current_date format='Y' }} Fitz Creative</div>
     </div>
 </footer>
