--- a/site/themes/fitz/templates/contact.html
+++ b/site/themes/fitz/templates/contact.html
@@ -56,6 +56,8 @@
 
                 <input type="text" name="honeypot" class="spam" />
 
+                {{ recaptcha }}
+
                 <button type="submit" class="btn btn-primary">Send</button>
             {{ /form:create }}
         </div>
