Update to Statamic 2.8.3

--- a/statamic/resources/js/components/installer/steps/settings.template.html
+++ b/statamic/resources/js/components/installer/steps/settings.template.html
@@ -13,7 +13,7 @@
             <small class="help-block">
                 {{ translate('cp.settings_locales_instructions') }}
             </small>
-            <locale_settings-fieldtype :data="locales"></locale_settings-fieldtype>
+            <locale_settings-fieldtype :data="locales" :index-php-warning="true"></locale_settings-fieldtype>
         </div>
 
         <div class="form-group">
