--- a/statamic/resources/sass/components/fieldtypes/bard.scss
+++ b/statamic/resources/sass/components/fieldtypes/bard.scss
@@ -235,6 +235,10 @@
     }
 }
 
+.bard-drag-handle {
+    @extend .drag-handle;
+}
+
 
 /* Fullscreen mode
   ========================================================================== */
