--- a/statamic/resources/js/components/typeahead/input.template.html
+++ b/statamic/resources/js/components/typeahead/input.template.html
@@ -6,5 +6,5 @@
        @keydown.enter="hit"
        @keydown.esc="reset"
        @blur="reset"
-       placeholder="Search..."
+       placeholder="{{ translate('cp.search') }}..."
    />
