--- a/statamic/resources/sass/components/fieldtypes/grid-replicator.scss
+++ b/statamic/resources/sass/components/fieldtypes/grid-replicator.scss
@@ -18,7 +18,7 @@
             background: #fff;
         }
 
-        label {
+        &.group-header label {
             margin-bottom: 0;
         }
     }
