--- a/statamic/resources/sass/elements/buttons.scss
+++ b/statamic/resources/sass/elements/buttons.scss
@@ -151,7 +151,7 @@ td .btn-icon {
         border-left: 1px solid rgba(0,0,0,.06);
     }
 
-    .btn:not(:last-child) {
+    .btn:not(:last-of-type) {
         border-right: 1px solid rgba(0,0,0,.06);
     }
 
@@ -195,7 +195,10 @@ td .btn-icon {
         0 1px 3px 0 rgba(0,0,0,.08);
     border-bottom: 1px solid #2090d5;
 
-    .btn.btn-primary { border: none; }
+    .btn.btn-primary {
+        border-top: none;
+        border-bottom: none;
+    }
 }
 
 
