--- a/statamic/resources/sass/components/nav-main.scss
+++ b/statamic/resources/sass/components/nav-main.scss
@@ -7,17 +7,22 @@
         top: -2px;
     }
 
+    ul:first-child {
+        flex: 1;
+        flex-shrink: 0;
+        flex-basis: auto;
+        height: 100vh;
+        overflow: scroll;
+        position: sticky;
+        top: 24px;
+    }
+
     // Generic list styles
     ul {
         list-style: none;
         margin: 16px 0;
-        flex: 1;
-        flex-shrink: 0;
-        flex-basis: auto;
         padding: 0;
         width: 100%;
-        position: sticky;
-        top: 24px;
 
         li {
             a:hover .icon,
