--- a/statamic/resources/js/components/fieldset-builder/builder.template.html
+++ b/statamic/resources/js/components/fieldset-builder/builder.template.html
@@ -64,6 +64,8 @@
 						:fieldtypes="fieldtypes">
 				</taxonomy-fields-builder>
 			</div>
+
+			<date-time-configuration :date.sync="fieldset.date"></date-time-configuration>
 		</div>
 	</div>
 </div>
