--- a/statamic/resources/js/components/publish/publish.template.html
+++ b/statamic/resources/js/components/publish/publish.template.html
@@ -35,14 +35,19 @@
             </template>
 
             <div class="btn-group mr-16" v-if="$parent.isPublishPage && !editingLayout">
-                <button type="button" class="btn" @click.prevent="$parent.preview">{{ translate('cp.sneak_peek') }}</button>
-                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <span class="caret"></span>
-                    <span class="sr-only">{{ translate('cp.toggle_dropdown') }}</span>
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a href="{{ url }}" target="_blank">{{ translate('cp.visit_url') }}</a></li>
-                </ul>
+                <template v-if="staticCachingEnabled">
+                    <a href="{{ url }}" target="_blank" class="btn">{{ translate('cp.visit_url') }}</a>
+                </template>
+                <template v-else>
+                    <button type="button" class="btn" @click.prevent="$parent.preview">{{ translate('cp.sneak_peek') }}</button>
+                    <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span class="caret"></span>
+                        <span class="sr-only">{{ translate('cp.toggle_dropdown') }}</span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a href="{{ url }}" target="_blank">{{ translate('cp.visit_url') }}</a></li>
+                    </ul>
+                </template>
             </div>
 
             <div class="btn-group btn-group-primary" v-if="canEdit && !editingLayout">
