--- a/statamic/resources/sass/components/grid.scss
+++ b/statamic/resources/sass/components/grid.scss
@@ -88,7 +88,7 @@
             padding: 10px;
             border-right: 1px solid $border;
             border-top: none;
-            width: 25%;
+            min-width: 25%;
             font-weight: 500;
         }
     }
