--- a/statamic/resources/sass/components/nav-main.scss
+++ b/statamic/resources/sass/components/nav-main.scss
@@ -11,8 +11,8 @@
         flex: 1;
         flex-shrink: 0;
         flex-basis: auto;
-        height: 100vh;
-        overflow: scroll;
+        max-height: 100vh;
+        overflow-y: auto;
         position: sticky;
         top: 24px;
     }
