--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -1,3 +1,8 @@
+// Tacit - CSS Framework for Dummies, Without Classes
+@import url('https://unpkg.com/tacit-css@1.3.6/dist/tacit-css-1.3.6.min.css');
+
+@import '~highlight.js/styles/nord';
+
 @tailwind preflight;
 
 @tailwind components;
