--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -1,10 +1,11 @@
-// Tacit - CSS Framework for Dummies, Without Classes
-@import url('https://unpkg.com/tacit-css@1.3.6/dist/tacit-css-1.3.6.min.css');
-
 @import '~highlight.js/styles/nord';
 
 @tailwind preflight;
 
 @tailwind components;
+
+code {
+  @apply font-mono bg-grey-light text-grey-darker py-1 px-1 rounded text-sm;
+}
 
 @tailwind utilities;
