--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -5,7 +5,19 @@
 @tailwind components;
 
 code {
-  @apply font-mono bg-grey-light text-grey-darker py-1 px-1 rounded text-sm;
+    @apply font-mono bg-grey-light text-grey-darker py-1 px-1 rounded text-sm;
+}
+
+.spaced-y-6 > * {
+    @apply mb-6;
+}
+
+.link {
+    @apply text-fitz no-underline font-bold;
+}
+
+h1 {
+    @apply my-6;
 }
 
 @tailwind utilities;
