--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -1,11 +1,11 @@
 @import '~highlight.js/styles/nord';
 
-@tailwind preflight;
+@tailwind base;
 
 @tailwind components;
 
 code {
-    @apply font-mono bg-grey-light text-grey-darker py-1 px-1 rounded text-sm;
+    @apply font-mono bg-gray-400 text-gray-700 py-1 px-1 rounded text-sm;
 }
 
 .spaced-y-6 > * {
@@ -14,6 +14,9 @@ code {
 
 .link {
     @apply text-fitz no-underline font-bold;
+    &:hover {
+        @apply underline;
+    }
 }
 
 h1 {
